[package]
name = "wrangler"
version = "0.1.0"
authors = ["Evan Walter <walterevan08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
shaderc = "0.6"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"